--- a/.github/workflows/publish-json-schemas.yaml
+++ b/.github/workflows/publish-json-schemas.yaml
@@ -40,8 +40,8 @@ jobs:
           for schema in "${schemas[@]}"; do
             echo "Publishing $schema schema..."
             
-            omni config print-schema $schema >| "./json-schemas/$schema-$INSTALLED_VERSION.json"
-            omni config print-schema $schema >| "./json-schemas/$schema-latest.json"
+            omni config schema $schema >| "./json-schemas/$schema-$INSTALLED_VERSION.json"
+            omni config schema $schema >| "./json-schemas/$schema-latest.json"
           done
 
       - name: Publish JSON Schemas
