--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -110,3 +110,7 @@ jobs:
   publish-site:
     needs: release
     uses: ./.github/workflows/publish-site.yaml
+    secrets: 
+        VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
