docs: fix gen:declspec task [skip ci]

--- a/apps/site/project.omni.yaml
+++ b/apps/site/project.omni.yaml
@@ -25,6 +25,9 @@ tasks:
 
   gen:declspec:
     command: bun run gen:declspec
+    output:
+      files:
+        - ./omni-declspec.json
 
   gen:refdocs:
     cache:
