--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,8 @@ name: CI
 on:
   push:
     branches: [main]
-    paths-ignore:
-      - "./apps/site/**"
+    paths:
+      - "!./apps/site/**"
     tags:
       - "v*.*.*" # Trigger release on version tags like v1.0.0
   pull_request:
@@ -110,7 +110,7 @@ jobs:
   publish-site:
     needs: release
     uses: ./.github/workflows/publish-site.yaml
-    secrets: 
-        VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-        VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+    secrets:
+      VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
