--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -15,25 +15,29 @@
         "@tanstack/react-router": "^1.131.30",
         "@tanstack/react-router-devtools": "^1.131.30",
         "@tanstack/react-start": "^1.131.30",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "commander": "^14.0.0",
         "fumadocs-core": "15.7.6",
         "fumadocs-mdx": "11.8.2",
         "fumadocs-ui": "15.7.6",
+        "lucide-react": "^0.542.0",
         "lucide-static": "^0.542.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwind-merge": "^3.3.1",
         "vite": "^7.1.3",
-        "zod": "^4.1.5",
-        "commander": "^14.0.0"
+        "zod": "^4.1.5"
     },
     "devDependencies": {
+        "@commander-js/extra-typings": "14.0.0",
         "@tailwindcss/vite": "^4.1.12",
         "@types/node": "^24.3.0",
         "@types/react": "^19.1.12",
         "@types/react-dom": "^19.1.9",
         "@vitejs/plugin-react": "^5.0.2",
-        "@commander-js/extra-typings": "14.0.0",
         "tailwindcss": "^4.1.12",
+        "tw-animate-css": "^1.3.7",
         "typescript": "^5.9.2",
         "vite-tsconfig-paths": "^5.1.4"
     }
