--- a/crates/omni_task_executor/project.omni.yaml
+++ b/crates/omni_task_executor/project.omni.yaml
@@ -9,6 +9,7 @@ dependencies:
   - omni_configurations
   - omni_expressions
   - omni_hasher
+  - omni_cache
   - system_traits
   - maps
   - config_utils
