refactor: cleanup omni_context [skip ci]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -136,6 +136,7 @@ omni_collector = { path = "./crates/omni_collector" }
 omni_utils = { path = "./crates/omni_utils" }
 omni_configurations = { path = "./crates/omni_configurations" }
 omni_context = { path = "./crates/omni_context" }
+omni_task_executor = { path = "./crates/omni_task_executor" }
 tracing-futures = { version = "^0.2.5", features = ["tokio"] }
 pathdiff = { version = "^0.2.3" }
 path-slash = { version = "^0.2.1" }
