--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -79,6 +79,8 @@ path-clean = { workspace = true }
 num_cpus = { workspace = true }
 omni_process = { workspace = true }
 omni_configurations = { workspace = true }
+omni_context = { workspace = true }
+omni_task_executor = { workspace = true }
 clap_declspec = { workspace = true }
 
 [dev-dependencies]
