--- a/crates/omni_cli_core/project.omni.yaml
+++ b/crates/omni_cli_core/project.omni.yaml
@@ -6,6 +6,8 @@ extends:
 
 dependencies:
   - omni_core
+  - omni_context
+  - omni_task_executor
   - env_loader
   - omni_expressions
   - config_utils
