--- a/crates/omni_task_executor/Cargo.toml
+++ b/crates/omni_task_executor/Cargo.toml
@@ -37,3 +37,5 @@ getset = { workspace = true }
 serde = { workspace = true }
 base64 = { workspace = true }
 omni_cache = { workspace = true }
+ahash = { workspace = true }
+bs58 = { workspace = true }
