--- a/crates/omni_test_utils/Cargo.toml
+++ b/crates/omni_test_utils/Cargo.toml
@@ -11,7 +11,6 @@ default = ["enable-tracing"]
 enable-tracing = ["trace/enabled", "dep:tracing"]
 
 [dependencies]
-omni_cli_core = { workspace = true }
 eyre = { workspace = true }
 thiserror = { workspace = true }
 strum = { workspace = true }
@@ -20,6 +19,7 @@ tracing = { workspace = true, optional = true }
 serde = { workspace = true }
 serde_yml = { workspace = true }
 omni_types = { workspace = true }
+omni_configurations = { workspace = true }
 #tempfile = { workspace = true }
 derive_builder = { workspace = true }
 config_utils = { workspace = true, features = [
@@ -28,10 +28,3 @@ config_utils = { workspace = true, features = [
     "validator-garde",
 ] }
 bs58 = { workspace = true }
-# merge = { workspace = true }
-# maps = { workspace = true }
-# sets = { workspace = true }
-# enum-map = { workspace = true }
-# omni_types = { workspace = true }
-# derive_more = { workspace = true }
-# derive-new = { workspace = true }
