--- a/crates/omni_test_utils/project.omni.yaml
+++ b/crates/omni_test_utils/project.omni.yaml
@@ -5,4 +5,5 @@ extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
 
 dependencies:
-  - omni_cli_core
+  - omni_configurations
+  - omni_types
