fix(omni_cli_core): broken log colors due to tracing-subscriber 0.3.20

--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -82,6 +82,7 @@ omni_configurations = { workspace = true }
 omni_context = { workspace = true }
 omni_task_executor = { workspace = true }
 clap_declspec = { workspace = true }
+atty = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
