--- a/crates/omni_context/Cargo.toml
+++ b/crates/omni_context/Cargo.toml
@@ -44,6 +44,7 @@ derive-new = { workspace = true }
 async-trait = { workspace = true }
 either = { workspace = true }
 shadow-rs = { workspace = true }
+owo-colors = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
