--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = { version = "^1.0.143" }
 trace = { path = "./crates/trace" }
 tracing = { version = "^0.1.41" }
 tracing-core = { version = "^0.1.34" }
-tracing-subscriber = { version = "^0.3.20", features = ["json"] }
+tracing-subscriber = { version = "=0.3.19", features = ["json"] } # Pin to 0.3.19 to avoid https://github.com/tokio-rs/tracing/issues/3369
 tracing-serde = { version = "^0.2.0" }
 futures = { version = "^0.3.31" }
 thiserror = "^2.0.16"
@@ -101,7 +101,7 @@ byteorder = { version = "^1.5.0" }
 rust-embed = { version = "8.7.2" }
 garde = { version = "^0.22.0", features = ["full"] }
 os_pipe = { version = "^1.2.2" }
-indexmap = { version = "^2.11.0", features = ["serde", "rayon"] }
+indexmap = { version = "^2.11.1", features = ["serde", "rayon"] }
 dashmap = { version = "^6.1.0", features = ["serde", "rayon"] }
 ahash = { version = "^0.8.12" }
 maps = { path = "./crates/maps" }
@@ -118,14 +118,14 @@ omni_hasher = { path = "./crates/omni_hasher" }
 derive_builder = { version = "^0.20.2" }
 blake3 = { version = "^1.8.2" }
 faster-hex = { version = "^0.10.0" }
-tempfile = { version = "^3.21.0" }
+tempfile = { version = "^3.22.0" }
 bs58 = { version = "^0.5.1" }
 yoke = { version = "^0.8.0", features = ["derive"] }
 owo-colors = { version = "^4.2.2" }
 tiny-gradient = { version = "^0.1.0" }
 omni_expressions = { path = "./crates/omni_expressions" }
 omni_cli_core = { path = "./crates/omni_cli_core" }
-cel = { version = "^0.11.0", features = ["json", "regex"] }
+cel = { version = "^0.11.1", features = ["json", "regex"] }
 omni_test_utils = { path = "./crates/omni_test_utils" }
 crossbeam-channel = { version = "^0.5.15" }
 shlex = { version = "^1.3.0" }
