--- a/crates/omni_task_executor/Cargo.toml
+++ b/crates/omni_task_executor/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["dep:tracing", "dep:trace", "trace/enabled"]
+enable-tracing = ["dep:tracing", "trace/enabled"]
 
 [dependencies]
 clap = { workspace = true }
@@ -18,7 +18,7 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 omni_core = { workspace = true }
 atty = { workspace = true }
-trace = { workspace = true, optional = true }
+trace = { workspace = true }
 tracing = { workspace = true, optional = true }
 shlex = { workspace = true }
 omni_hasher = { workspace = true }
