feat: add omni_term_ui stream implementation

--- a/crates/omni_task_executor/Cargo.toml
+++ b/crates/omni_task_executor/Cargo.toml
@@ -42,3 +42,4 @@ omni_cache = { workspace = true }
 ahash = { workspace = true }
 bs58 = { workspace = true }
 num_cpus = { workspace = true }
+omni_term_ui = { workspace = true }
