--- a/crates/omni_term_ui/project.omni.yaml
+++ b/crates/omni_term_ui/project.omni.yaml
@@ -1,17 +1,8 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/omni-oss/omni/refs/heads/json-schemas/project-latest.json
-name: omni_task_executor
+name: omni_term_ui
 
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
 
 dependencies:
-  - omni_core
-  - omni_configurations
-  - omni_expressions
-  - omni_hasher
-  - omni_cache
-  - omni_term_ui
-  - system_traits
   - maps
-  - config_utils
-  - omni_context
