--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ tokio = { version = "^1.47.1", features = [
     "time",
     "macros",
     "process",
+    "io-std",
     "io-util",
 ] }
 tokio-util = { version = "^0.7.16", features = ["compat"] }
@@ -151,6 +152,7 @@ ratatui = { version = "^0.29.0" }
 crossterm = { version = "^0.27.0" }
 omni_term_ui = { path = "./crates/omni_term_ui" }
 clap_utils = { path = "./crates/clap_utils" }
+vte = { version = "^0.15.0" }
 
 [profile.release]
 incremental = true
