--- a/crates/omni_term_ui/Cargo.toml
+++ b/crates/omni_term_ui/Cargo.toml
@@ -27,3 +27,6 @@ tokio = { workspace = true }
 tokio-util = { workspace = true }
 maps = { workspace = true }
 parking_lot = { workspace = true }
+vte = { workspace = true }
+crossbeam-channel = { workspace = true }
+bytes = { workspace = true }
