--- a/crates/omni_term_ui/Cargo.toml
+++ b/crates/omni_term_ui/Cargo.toml
@@ -30,3 +30,4 @@ parking_lot = { workspace = true }
 vte = { workspace = true }
 crossbeam-channel = { workspace = true }
 bytes = { workspace = true }
+unicode-width = { workspace = true }
