feat(omni_term_ui): implement key event handling in TUI mode

--- a/crates/omni_term_ui/Cargo.toml
+++ b/crates/omni_term_ui/Cargo.toml
@@ -31,3 +31,4 @@ vte = { workspace = true }
 crossbeam-channel = { workspace = true }
 bytes = { workspace = true }
 unicode-width = { workspace = true }
+system_traits = { workspace = true }
