--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["dep:tracing", "dep:trace", "trace/enabled"]
+enable-tracing = ["trace/enabled"]
 
 [dependencies]
 mockall = { workspace = true }
@@ -32,8 +32,8 @@ yoke = { workspace = true }
 omni_types = { workspace = true, features = ["serde"] }
 globset = { workspace = true }
 bytes = { workspace = true }
-trace = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
+trace = { workspace = true }
+tracing = { workspace = true }
 time = { workspace = true }
 omni_utils = { workspace = true }
 omni_collector = { workspace = true }
