--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -84,6 +84,7 @@ omni_task_executor = { workspace = true }
 clap_declspec = { workspace = true }
 atty = { workspace = true }
 clap_utils = { workspace = true }
+omni_tracing_subscriber = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
