--- a/crates/clap_utils/Cargo.toml
+++ b/crates/clap_utils/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["dep:tracing", "trace/enabled"]
+enable-tracing = [ "trace/enabled"]
 
 [dependencies]
 eyre = { workspace = true }
