--- a/crates/omni_collector/Cargo.toml
+++ b/crates/omni_collector/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["dep:trace", "trace/enabled", "dep:tracing"]
+enable-tracing = ["trace/enabled"]
 
 [dependencies]
 eyre = { workspace = true }
@@ -17,8 +17,8 @@ dir_walker = { workspace = true }
 omni_types = { workspace = true }
 omni_hasher = { workspace = true }
 system_traits = { workspace = true }
-trace = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
+trace = { workspace = true }
+tracing = { workspace = true }
 enum-map = { workspace = true }
 globset = { workspace = true }
 omni_utils = { workspace = true }
