--- a/crates/omni_context/Cargo.toml
+++ b/crates/omni_context/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["trace/enabled", "dep:tracing"]
+enable-tracing = ["trace/enabled"]
 
 [[bench]]
 path = "./benches/omni_context_benchmarks.rs"
@@ -18,8 +18,8 @@ harness = false
 serde = { workspace = true }
 thiserror = { workspace = true }
 eyre = { workspace = true }
-trace = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
+trace = { workspace = true }
+tracing = { workspace = true }
 strum = { workspace = true }
 system_traits = { workspace = true }
 omni_configurations = { workspace = true }
@@ -45,6 +45,7 @@ async-trait = { workspace = true }
 either = { workspace = true }
 shadow-rs = { workspace = true }
 owo-colors = { workspace = true }
+omni_tracing_subscriber = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
