--- a/crates/omni_core/Cargo.toml
+++ b/crates/omni_core/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["trace/enabled", "dep:tracing"]
+enable-tracing = ["trace/enabled"]
 
 [dependencies]
 serde = { workspace = true }
@@ -16,8 +16,8 @@ derive_more = { workspace = true }
 petgraph = { workspace = true }
 thiserror = { workspace = true }
 eyre = { workspace = true }
-trace = { workspace = true, optional = true }
-tracing = { workspace = true, optional = true }
+trace = { workspace = true }
+tracing = { workspace = true }
 strum = { workspace = true }
 derive-new = { workspace = true }
 maps = { workspace = true }
