--- a/crates/omni_term_ui/Cargo.toml
+++ b/crates/omni_term_ui/Cargo.toml
@@ -7,7 +7,7 @@ repository.workspace = true
 
 [features]
 default = ["enable-tracing"]
-enable-tracing = ["dep:tracing", "trace/enabled"]
+enable-tracing = ["trace/enabled"]
 
 [dependencies]
 async-trait = { workspace = true }
@@ -32,3 +32,4 @@ crossbeam-channel = { workspace = true }
 bytes = { workspace = true }
 unicode-width = { workspace = true }
 system_traits = { workspace = true }
+enumflags2 = { workspace = true }
