--- a/crates/omni_task_executor/Cargo.toml
+++ b/crates/omni_task_executor/Cargo.toml
@@ -18,7 +18,7 @@ tokio-util = { workspace = true }
 omni_core = { workspace = true }
 atty = { workspace = true }
 trace = { workspace = true }
-tracing = { workspace = true, optional = true }
+tracing = { workspace = true }
 shlex = { workspace = true }
 omni_hasher = { workspace = true }
 system_traits = { workspace = true }
@@ -44,3 +44,4 @@ bs58 = { workspace = true }
 num_cpus = { workspace = true }
 omni_term_ui = { workspace = true }
 omni_tracing_subscriber = { workspace = true }
+crossbeam-channel = { workspace = true }
