--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -85,6 +85,8 @@ clap_declspec = { workspace = true }
 atty = { workspace = true }
 clap_utils = { workspace = true }
 omni_tracing_subscriber = { workspace = true }
+time = { workspace = true }
+bytesize = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
