--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ version = "0.0.0-semantically-released"
 authors = ["Clarence Manuel <rencedm112@gmail.com>"]
 
 [workspace.dependencies]
-serde = { version = "^1.0.219", features = ["derive", "rc", "alloc"] }
+serde = { version = "^1.0.226", features = ["derive", "rc", "alloc"] }
 sys_traits = { version = "^0.1.17", features = ["real"] }
 system_traits = { path = "./crates/system_traits" }
 async-trait = { version = "^0.1.89" }
@@ -156,6 +156,7 @@ vte = { version = "^0.15.0" }
 unicode-width = "=0.2.0" # hard requirement for ratatui
 enumflags2 = { version = "^0.7.12" }
 omni_tracing_subscriber = { path = "./crates/omni_tracing_subscriber" }
+bytesize = { version = "^2.1.0", features = ["serde"] }
 
 [profile.release]
 incremental = true
