--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,6 @@ tokio = { version = "^1.47.1", features = [
     "io-util",
 ] }
 tokio-util = { version = "^0.7.16", features = ["compat"] }
-itertools = { version = "^0.14.0" }
 rayon = { version = "^1.11.0" }
 reqwest = { version = "^0.12.23", features = [
     "charset",
@@ -157,6 +156,9 @@ unicode-width = "=0.2.0" # hard requirement for ratatui
 enumflags2 = { version = "^0.7.12" }
 omni_tracing_subscriber = { path = "./crates/omni_tracing_subscriber" }
 bytesize = { version = "^2.1.0", features = ["serde"] }
+humantime = {version = "^2.3.0"}
+humantime-serde = {version = "^1.1.1"}
+itertools = { version = "^0.14.0" }
 
 [profile.release]
 incremental = true
