--- a/crates/omni_task_executor/Cargo.toml
+++ b/crates/omni_task_executor/Cargo.toml
@@ -45,3 +45,4 @@ num_cpus = { workspace = true }
 omni_term_ui = { workspace = true }
 omni_tracing_subscriber = { workspace = true }
 crossbeam-channel = { workspace = true }
+omni_execution_plan = { workspace = true }
