--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,6 +159,7 @@ bytesize = { version = "^2.1.0", features = ["serde"] }
 humantime = {version = "^2.3.0"}
 humantime-serde = {version = "^1.1.1"}
 itertools = { version = "^0.14.0" }
+omni_execution_plan = { path = "./crates/omni_execution_plan" }
 
 [profile.release]
 incremental = true
