--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -89,6 +89,7 @@ time = { workspace = true }
 bytesize = { workspace = true }
 humantime = { workspace = true }
 itertools = { workspace=true }
+omni_task_context = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
