feat(omni_remote_cache_storage): implement local disk and s3 backend

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["cli/*", "crates/*"]
+members = ["cli/*", "crates/*", "services/*"]
 # default-members = ["cli/omni"]
 
 [workspace.package]
@@ -161,6 +161,13 @@ humantime-serde = {version = "^1.1.1"}
 itertools = { version = "^0.14.0" }
 omni_execution_plan = { path = "./crates/omni_execution_plan" }
 omni_task_context = { path = "./crates/omni_task_context" }
+omni_remote_cache_service = { path = "./services/omni_remote_cache_service" }
+omni_remote_cache_storage = { path = "./crates/omni_remote_cache_storage" }
+axum = { version = "^0.8.4", features = ["macros", "http2"] }
+aws-config = { version = "^1.8.6" }
+aws-sdk-s3 = { version = "^1.106.0" }
+aws-credential-types = { version = "^1.2.6" }
+aws-types = { version = "^1.3.8" }
 
 [profile.release]
 incremental = true
