--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,11 +163,12 @@ omni_execution_plan = { path = "./crates/omni_execution_plan" }
 omni_task_context = { path = "./crates/omni_task_context" }
 omni_remote_cache_service = { path = "./services/omni_remote_cache_service" }
 omni_remote_cache_storage = { path = "./crates/omni_remote_cache_storage" }
-axum = { version = "^0.8.4", features = ["macros", "http2"] }
+axum = { version = "^0.8.4", features = ["macros", "http2", "multipart"] }
 aws-config = { version = "^1.8.6" }
 aws-sdk-s3 = { version = "^1.106.0" }
 aws-credential-types = { version = "^1.2.6" }
 aws-types = { version = "^1.3.8" }
+lru = { version = "^0.16.1" }
 
 [profile.release]
 incremental = true
