--- a/crates/omni_remote_cache_storage/project.omni.yaml
+++ b/crates/omni_remote_cache_storage/project.omni.yaml
@@ -4,4 +4,5 @@ name: omni_remote_cache_storage
 extends:
   - "@workspace/omni/presets/rust-lib.omni.yaml"
 
-dependencies: []
+dependencies:
+  - maps
