--- a/crates/omni_remote_cache_storage/Cargo.toml
+++ b/crates/omni_remote_cache_storage/Cargo.toml
@@ -6,7 +6,8 @@ version.workspace = true
 repository.workspace = true
 
 [features]
-default = ["enable-tracing", "s3", "local-disk", "in-memory"]
+default = ["enable-tracing", "s3", "local-disk", "in-memory", "utoipa"]
+utoipa = ["dep:utoipa"]
 enable-tracing = ["trace/enabled"]
 s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:http", "dep:aws-credential-types", "dep:aws-types"]
 local-disk = []
@@ -32,6 +33,7 @@ aws-types = { workspace = true, optional = true }
 http = { workspace = true, optional = true }
 maps = { workspace = true }
 lru = { workspace = true }
+utoipa = { workspace = true, optional = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
