--- a/crates/omni_cli_core/Cargo.toml
+++ b/crates/omni_cli_core/Cargo.toml
@@ -34,7 +34,7 @@ tracing-futures = { workspace = true, optional = true }
 omni_types = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-serde_yml = { workspace = true }
+serde_norway = { workspace = true }
 schemars = { workspace = true }
 globset = { workspace = true }
 regex = { workspace = true }
