--- a/crates/omni_configurations/Cargo.toml
+++ b/crates/omni_configurations/Cargo.toml
@@ -12,7 +12,7 @@ enable-tracing = ["trace/enabled"]
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
-serde_yml = { workspace = true }
+serde_norway = { workspace = true }
 toml = { workspace = true }
 schemars = { workspace = true }
 derive_more = { workspace = true }
