--- a/services/omni_remote_cache_service/Cargo.toml
+++ b/services/omni_remote_cache_service/Cargo.toml
@@ -10,13 +10,31 @@ repository.workspace = true
 async-trait = { workspace = true }
 eyre = { workspace = true }
 thiserror = { workspace = true }
+strum = { workspace = true }
 trace = { workspace = true }
 tracing = { workspace = true }
 derive-new = { workspace = true }
 derive_builder = { workspace = true }
 tokio = { workspace = true }
 axum = { workspace = true }
+axum-valid = { workspace = true }
+axum-extra = { workspace = true }
+tower = { workspace = true }
+tower-http = { workspace = true }
 clap = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_norway = { workspace = true }
+bytes = { workspace = true }
+bytesize = { workspace = true }
+http = { workspace = true }
 omni_remote_cache_storage = { workspace = true }
+omni_tracing_subscriber = { workspace = true }
+rust-embed = { workspace = true, features = ["compression", "include-exclude", "deterministic-timestamps", "axum-ex"] }
+utoipa = { workspace = true }
+shadow-rs = { workspace = true }
+
+
+[build-dependencies]
+eyre = { workspace = true }
+shadow-rs = { workspace = true, features = ["default"] }
