feat(omni_remote_cache_service): add scalar ui [skip ci]

--- a/services/omni_remote_cache_service/Cargo.toml
+++ b/services/omni_remote_cache_service/Cargo.toml
@@ -33,6 +33,7 @@ omni_tracing_subscriber = { workspace = true }
 rust-embed = { workspace = true, features = ["compression", "include-exclude", "deterministic-timestamps", "axum-ex"] }
 utoipa = { workspace = true }
 shadow-rs = { workspace = true }
+bs58 = { workspace = true }
 
 
 [build-dependencies]
