fix(omni_remote_cache_service): open api specs [skip ci]

--- a/services/omni_remote_cache_service/Cargo.toml
+++ b/services/omni_remote_cache_service/Cargo.toml
@@ -34,6 +34,7 @@ rust-embed = { workspace = true, features = ["compression", "include-exclude", "
 utoipa = { workspace = true }
 shadow-rs = { workspace = true }
 bs58 = { workspace = true }
+tokio-util = { workspace = true }
 
 
 [build-dependencies]
