--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ tokio = { version = "^1.47.1", features = [
     "io-std",
     "io-util",
 ] }
+tokio-stream = { version = "^0.1.17", features = ["full"] }
 tokio-util = { version = "^0.7.16", features = ["compat"] }
 rayon = { version = "^1.11.0" }
 reqwest = { version = "^0.12.23", features = [
@@ -192,6 +193,9 @@ utoipa = { version = "^5.4.0", features = [
     "repr",
     "non_strict_integers"
 ] }
+utoipa-scalar = { version = "^0.3.0", features = ["axum"] }
+omni_path_utils = { path = "./crates/omni_path_utils" }
+async-stream = { version = "^0.3.6" }
 
 [profile.release]
 incremental = true
