--- a/services/omni_remote_cache_service/Cargo.toml
+++ b/services/omni_remote_cache_service/Cargo.toml
@@ -28,14 +28,17 @@ serde_norway = { workspace = true }
 bytes = { workspace = true }
 bytesize = { workspace = true }
 http = { workspace = true }
+http-body = { workspace = true }
 omni_remote_cache_storage = { workspace = true }
 omni_tracing_subscriber = { workspace = true }
 rust-embed = { workspace = true, features = ["compression", "include-exclude", "deterministic-timestamps", "axum-ex"] }
 utoipa = { workspace = true }
+utoipa-scalar = { workspace = true }
 shadow-rs = { workspace = true }
 bs58 = { workspace = true }
 tokio-util = { workspace = true }
-
+tokio-stream = { workspace = true }
+omni_path_utils = { workspace = true }
 
 [build-dependencies]
 eyre = { workspace = true }
