feat(omni_remote_cache_service): implement API key security handling

--- a/services/omni_remote_cache_service/Cargo.toml
+++ b/services/omni_remote_cache_service/Cargo.toml
@@ -41,6 +41,8 @@ tokio-stream = { workspace = true }
 omni_path_utils = { workspace = true }
 schemars = { workspace = true }
 maps = { workspace = true }
+sets = { workspace = true }
+time = { workspace = true }
 
 [build-dependencies]
 eyre = { workspace = true }
