--- a/services/omni_remote_cache_service/orcs.config.json
+++ b/services/omni_remote_cache_service/orcs.config.json
@@ -18,5 +18,22 @@
                 }
             }
         }
+    },
+    "security": {
+        "api_keys": {
+            "key1": {
+                "description": "Key 1",
+                "tenants": ["tenant1"],
+                "organizations": ["org1"],
+                "workspaces": ["ws1"],
+                "environments": ["env1"],
+                "scopes": [
+                    "read:artifacts",
+                    "write:artifacts",
+                    "list:artifacts",
+                    "delete:artifacts"
+                ]
+            }
+        }
     }
 }
