--- a/Cargo.toml
+++ b/Cargo.toml
@@ -196,6 +196,7 @@ utoipa = { version = "^5.4.0", features = [
 utoipa-scalar = { version = "^0.3.0", features = ["axum"] }
 omni_path_utils = { path = "./crates/omni_path_utils" }
 async-stream = { version = "^0.3.6" }
+flate2 = { version = "^1.1.4" }
 
 [profile.release]
 incremental = true
