--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
         "vitest": "^3.2.4",
         "typescript": "^5.9.2"
     },
-    "packageManager": "bun@1.2.22",
+    "packageManager": "bun@1.2.23",
     "workspaces": [
         "packages/*",
         "scripts/*",
         "apps/*",
-        "services/*"
+        "services/*",
+        "tests/*"
     ]
 }
