--- a/services/omni_remote_cache_service/Cargo.toml
+++ b/services/omni_remote_cache_service/Cargo.toml
@@ -43,6 +43,10 @@ schemars = { workspace = true }
 maps = { workspace = true }
 sets = { workspace = true }
 time = { workspace = true }
+axum-test = { workspace = true }
+
+[dev-dependencies]
+axum-test = { workspace = true }
 
 [build-dependencies]
 eyre = { workspace = true }
